--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>StarWars Informer</title>
 
     <!-- Bootstrap (bootswatch) -->
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
