component random-planet was stylized and connected to server. created state for the component and added data to render

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>StarWars Informer</title>
 
+
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Coda|Lalezar&display=swap" rel="stylesheet">
     <!-- Bootstrap (bootswatch) -->
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   </head>
